--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
             android:exported="false" />
         <activity
             android:name=".activities.MainActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".activities.FlashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
