--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
         <activity
             android:name=".activities.MainActivity"
             android:exported="true"></activity>
+        <activity android:name=".activities.CategoryTab"
+            android:exported="false"/>
+        <activity android:name=".activities.ChangeProfile"
+            android:exported="false"/>
         <activity
             android:name=".activities.FlashScreenActivity"
             android:exported="true">
